// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > render markdown slides 1`] = `
"<div id="presentation-viewer-main" class="presentation-viewer">
  <spy-stub></spy-stub>
  <div class="reveal slide center focused has-horizontal-slides" role="application" data-transition-speed="default" data-background-transition="fade">
    <div id="slideContainer" class="slides no-transition" style="width: 960px; height: 700px; left: 50%; top: 50%; bottom: auto; right: auto; transform: translate(-50%, -50%) scale(0.2);">
      <section data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;" class="present">
        <h3 id="slide-1">Slide 1</h3>
        <p>Lorem <strong>Bold</strong> <em>Italic</em> <del>strike through</del>
        <div class="alert">
          <blockquote>
            <p>Quote statement</p>
          </blockquote>
        </div>
        </p>
        <ul>
          <li><input disabled="" type="checkbox"> check box</li>
        </ul>
        <ul>
          <li><input disabled="" type="checkbox"> check box</li>
        </ul>
      </section>
      <section data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;" class="future" hidden="" aria-hidden="true">
        <h3 id="slide-2">Slide 2</h3>
        <p>Unordered list:</p>
        <ul>
          <li>item 1</li>
        </ul>
        <ul>
          <li>item 2</li>
        </ul>
        <p>Ordered list:</p>
        <ol>
          <li>item 1</li>
          <li>item 2</li>
        </ol>
      </section>
      <section data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;" class="future" hidden="" aria-hidden="true">
        <h3 id="external-image">External Image</h3>
        <p><img src="https://external:9200/cat.jpg" alt="cat"></p>
      </section>
      <section data-markdown="" data-markdown-parsed="true" style="top: 350px; display: none;" class="future" hidden="" aria-hidden="true">
        <h3 id="uploaded-image">Uploaded Image</h3>
        <p><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcIAAAHCCAYAAAB8GMlFAAAAAXNSR0IArs4c6QAAIABJREFUeF==" alt=""></p>
      </section>
      <section data-markdown="" data-markdown-parsed="true" style="top: 350px; display: none;" class="future" hidden="" aria-hidden="true">
        <h3 id="occis-image">ocCIS Image</h3>
        <p><img src="blob:nodedata:0295bafb-5976-468a-a263-685a8872cb96" alt="cool"></p>
        <p><img src="blob:nodedata:0295bafb-5976-468a-a263-685a8872cb96" alt="cool"></p>
        <p><img src="./non-existing-image.png" alt="non-existing"></p>
        <p><img src="blob:nodedata:0295bafb-5976-468a-a263-685a8872cb96" alt="sub-folder-image"></p>
        <p><img src="./non-existing/another-cool.jpg" alt="sub-folder-image"></p>
      </section>
      <section data-markdown="" data-markdown-parsed="true" style="top: 350px; display: none;" class="future" hidden="" aria-hidden="true">
        <h3 id="code-block">Code block</h3>
        <pre class="code-wrapper"><code class="hljs language-clean" data-highlighted="yes"><span class="hljs-keyword">code</span> block</code></pre>
      </section>
    </div>
    <div class="backgrounds no-transition">
      <div class="slide-background present" style="display: block;" data-loaded="true">
        <div class="slide-background-content"></div>
      </div>
      <div class="slide-background future" style="display: block;" data-loaded="true">
        <div class="slide-background-content"></div>
      </div>
      <div class="slide-background future" style="display: block;" data-loaded="true">
        <div class="slide-background-content"></div>
      </div>
      <div class="slide-background future" style="display: none;">
        <div class="slide-background-content"></div>
      </div>
      <div class="slide-background future" style="display: none;">
        <div class="slide-background-content"></div>
      </div>
      <div class="slide-background future" style="display: none;">
        <div class="slide-background-content"></div>
      </div>
    </div>
    <div class="slide-number" style="display: none;"></div>
    <aside class="controls" style="display: block;" data-controls-layout="edges" data-controls-back-arrows="faded"><button class="navigate-left" aria-label="previous slide" disabled="disabled">
        <div class="controls-arrow"></div>
      </button>
      <button class="navigate-right enabled highlight" aria-label="next slide">
        <div class="controls-arrow"></div>
      </button>
      <button class="navigate-up" aria-label="above slide" disabled="disabled">
        <div class="controls-arrow"></div>
      </button>
      <button class="navigate-down" aria-label="below slide" disabled="disabled">
        <div class="controls-arrow"></div>
      </button>
    </aside>
    <div class="progress" style="display: block;"><span style="transform: scaleX(0);"></span></div>
    <div class="speaker-notes" data-prevent-swipe="" tabindex="0"></div>
    <div class="pause-overlay"><button class="resume-button">Resume presentation</button></div>
    <div style="position: absolute; height: 1px; width: 1px; overflow: hidden;" class="aria-status" aria-live="polite" aria-atomic="true"></div>
  </div>
</div>"
`;

exports[`Template Features > should render about us template 1`] = `
"<div id="slideContainer" class="slides" style="width: 960px; height: 700px; left: 50%; top: 50%; bottom: auto; right: auto; transform: translate(-50%, -50%) scale(0.2);">
  <section class="about-us present" data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;">
    <div class="content-container">
      <div class="title">
        <h1>

          <p>About Us</p>
        </h1>
        <div class="logo">
          <img src="https://external:9200/cat.jpg" alt="Logo">
        </div>
      </div>

      <div class="content-wrapper">
        <div class="content">
          <div class="about-us-text">

            <p>Some content about us.</p>
          </div>
          <div class="info-section">

            <div class="info-box">
              <h3>WWW</h3>
              <p>www.example.com</p>
            </div>
            <div class="divider"></div>
            <div class="info-box">
              <h3>LINKEDIN</h3>
              <p>www.linkedin.com/company/example</p>
            </div>
            <div class="divider"></div>
            <div class="info-box">
              <h3>FACEBOOK</h3>
              <p>www.facebook.com/example</p>
            </div>
            <div class="divider"></div>
            <div class="info-box">
              <h3>X</h3>
              <p>www.x.com/example</p>
            </div>
            <div class="divider"></div>

          </div>

        </div>
      </div>
    </div>
    <footer>
      <div class="footer-content"></div>
      <div class="custom-slide-number"></div>
    </footer>

  </section>
</div>"
`;

exports[`Template Features > should render cover template 1`] = `
"<div id="slideContainer" class="slides" style="width: 960px; height: 700px; left: 50%; top: 50%; bottom: auto; right: auto; transform: translate(-50%, -50%) scale(0.2);">
  <section class="cover present" data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;">
    <div class="content-container">
      <div class="logo">
        <img src="https://external:9200/cat.jpg" alt="Logo">
      </div>

      <div class="content">
        <h1>Reveal Js Templates in Web App Presentation Viewer</h1>

        <p>
          By: John Doe
        </p>

      </div>
    </div>

  </section>
</div>"
`;

exports[`Template Features > should render title content image template 1`] = `
"<div id="slideContainer" class="slides" style="width: 960px; height: 700px; left: 50%; top: 50%; bottom: auto; right: auto; transform: translate(-50%, -50%) scale(0.2);">
  <section class="title-content-image present" data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;">
    <div class="content-container">
      <div class="title">
        <h1>

          <p>Title Content Image Slide</p>
        </h1>
        <div class="logo">
          <img src="https://external:9200/cat.jpg" alt="Logo">
        </div>
      </div>

      <div class="content-wrapper">
        <div class="content">

          <ul>
            <li>Introduction to mountain ecosystems</li>
            <li>Basic concepts of quantum encryption</li>
            <li>Exploring culinary traditions in Southeast Asia</li>
            <li>Overview of blockchain consensus mechanisms</li>
          </ul>
          <p><img src="https://external:9200/cat.jpg" alt="cat"></p>
        </div>
      </div>
    </div>
    <footer>
      <div class="footer-content"></div>
      <div class="custom-slide-number"></div>
    </footer>

  </section>
</div>"
`;

exports[`Template Features > should render title content template 1`] = `
"<div id="slideContainer" class="slides" style="width: 960px; height: 700px; left: 50%; top: 50%; bottom: auto; right: auto; transform: translate(-50%, -50%) scale(0.2);">
  <section class="title-content present" data-markdown="" data-markdown-parsed="true" style="top: 350px; display: block;">
    <div class="content-container">
      <div class="title">
        <h1>

          <p>Title Content Slide</p>
        </h1>
        <div class="logo">
          <img src="https://external:9200/cat.jpg" alt="Logo">
        </div>
      </div>

      <div class="content-wrapper">
        <div class="content">

          <ul>
            <li>Introduction to mountain ecosystems</li>
            <li>Basic concepts of quantum encryption</li>
            <li>Exploring culinary traditions in Southeast Asia</li>
            <li>Overview of blockchain consensus mechanisms</li>
            <li>Setting up a personal productivity system</li>
            <li>Writing clean, maintainable JavaScript code</li>
            <li>Understanding modern art movements</li>
            <li>History of aviation and early flight experiments</li>
            <li>Managing team dynamics in remote work</li>
          </ul>
        </div>
      </div>
    </div>
    <footer>
      <div class="footer-content"></div>
      <div class="custom-slide-number"></div>
    </footer>

  </section>
</div>"
`;
